wip: パッケージ化途中

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "easeljs-react-fiber",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "easeljs-react",
+  "version": "0.0.1",
+  "main": "dist/src/index.js",
   "license": "MIT",
   "scripts": {
     "start": "npm run build && npm run serve",
@@ -14,24 +14,26 @@
     "watchify": "watchify ./dist/example/index.js --verbose --debug -t [browserify-shim] -o ./public/dist/index.js",
     "test": "jest --forceExit",
     "watch": "parallelshell 'chokidar \"src/**.{ts,js,jsx}\"' 'npm run watch-ts' 'npm run watchify'",
-    "clean": "rm -rf dist/*"
+    "clean": "rm -rf dist/*",
+    "postinstall": "postinstall-build dist"
   },
   "dependencies": {
-    "@types/easeljs": "^1.0.0",
-    "@types/node": "^9.4.7",
-    "@types/react": "^16.0.40",
     "easeljs": "^1.0.2",
     "fbjs": "^0.8.16",
+    "postinstall-build": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-reconciler": "^0.7.0"
   },
   "devDependencies": {
-    "typescript": "^2.7.2",
+    "@types/easeljs": "^1.0.0",
+    "@types/node": "^9.4.7",
+    "@types/react": "^16.0.40",
     "browserify": "^16.1.1",
     "browserify-shim": "^3.8.14",
     "chokidar-cli": "^1.2.0",
     "parallelshell": "^3.0.2",
+    "typescript": "^2.7.2",
     "watchify": "^3.11.0"
   },
   "browserify-shim": {
