--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "easeljs-react",
   "version": "0.0.1",
   "main": "dist/src/index.js",
+  "types": ["dest/src/index.d.ts", "src/types.d.ts"],
   "license": "MIT",
   "scripts": {
     "start": "npm run build && npm run serve",
     "check": "npm run build && npm run test",
     "build": "npm run build-ts && npm run browserify",
     "lint": "tslint src/**/*.ts -p ./tslint.json",
-    "build-ts": "tsc",
+    "build-ts": "tsc --declaration",
     "watch-ts": "tsc -w",
     "browserify": "browserify ./dist/example/index.js -t [browserify-shim] --debug -o ./public/dist/index.js",
     "watchify": "watchify ./dist/example/index.js --verbose --debug -t [browserify-shim] -o ./public/dist/index.js",
