--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "easeljs-react",
   "version": "0.0.1",
-  "main": "dist/src/index.js",
-  "types": ["index.d.ts"],
+  "author": "Yusuke Sakurai<kerokerokerop@gmail.com>",
+  "repository": "https://github.com/loilo-inc/easeljs-react",
+  "bugs":  "https://github.com/loilo-inc/easeljs-react/issues",
+  "main": "lib/index.js",
+  "keywords": ["easeljs", "createjs", "react", "react-reconciler"],
+  "types": [
+    "index.d.ts"
+  ],
   "license": "MIT",
   "scripts": {
     "start": "npm run build && npm run serve",
     "check": "npm run build && npm run test",
     "build": "npm run build-ts",
+    "lib"  : "tsc -p ./tsconfig.lib.json",
     "build2": "npm run build && npm run browserify",
     "lint": "tslint src/**/*.ts -p ./tslint.json",
     "build-ts": "tsc",
@@ -16,12 +23,10 @@
     "watchify": "watchify ./dist/example/index.js --verbose --debug -t [browserify-shim] -o ./public/dist/index.js",
     "test": "jest --forceExit",
     "watch": "parallelshell 'chokidar \"src/**.{ts,js,jsx}\"' 'npm run watch-ts' 'npm run watchify'",
-    "clean": "rm -rf dist/*",
-    "postinstall": "postinstall-build dist"
+    "clean": "rm -rf dist/*"
   },
   "dependencies": {
     "easeljs": "^1.0.2",
-    "postinstall-build": "^5.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-reconciler": "^0.7.0"
