--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2015",
+    "module": "ES2020",
+    "target": "ES2020",
     "outDir": "lib",
+    "moduleResolution": "Node",
     "jsx": "react",
     "baseUrl": ".",
     "allowJs": true
